--- a/fx-password-xml/pom.xml
+++ b/fx-password-xml/pom.xml
@@ -24,6 +24,11 @@
             <id>central</id>
             <url>http://central.maven.org/maven2/</url>
         </repository>
+        <repository>
+            <id>central</id>
+            <name>jcenter</name>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -35,6 +40,16 @@
             <groupId>com.fasterxml.woodstox</groupId>
             <artifactId>woodstox-core</artifactId>
             <version>5.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>8.40.15</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kordamp.bootstrapfx</groupId>
+            <artifactId>bootstrapfx-core</artifactId>
+            <version>0.2.4</version>
         </dependency>
     </dependencies>
 
